--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:background="@color/colorPrimary"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:onClick="loginPressed"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"/>
     <Button
@@ -50,6 +51,7 @@
         android:layout_below="@+id/login_button"
         android:id="@+id/signup_button"
         android:text="Sign up"
+        android:onClick="signupPressed"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"/>
 
