--- a/app/src/main/res/layout/answer_card.xml
+++ b/app/src/main/res/layout/answer_card.xml
@@ -28,7 +28,7 @@
             android:id="@+id/answer_upvotes_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/question_card_text"
+            android:layout_toRightOf="@+id/question_card_text"
             android:gravity="right|center_vertical"
             android:layout_marginRight="10dp"
             />
